# LiteLLM

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/: cli.py  config.py  models.py  workflow.py
src/agents/: content.py  research.py
tests/: test_workflow.py
